# tumulus_detect

./: .gitignore  CHANGES.md  README.md  create_patches.ipynb  setup_vlm.sh  tumulus_detect.py  vlm_verify_tumuli.py
environment/: environment.yml  pyproject.toml
old_version/: tumulus_cv_detector.py  tumulus_detect.py  tumulus_yolo_pipeline_short.py
