[tool.poetry]
name = "tumulus-detect"
version = "0.3.0"
description = "Tumulus detection from Pleiades Neo imagery (YOLOv8 + VLM verification)"
authors = ["Anton Koutoupas <antonkout@proton.me>"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "*"
pandas = "*"
matplotlib = "*"
opencv-python = "*"
rasterio = "*"
geopandas = "*"
shapely = "*"
pillow = "*"
requests = "*"
tqdm = "*"
ultralytics = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
